# friday

./: Cargo.toml  LICENSE  build.rs  test.fri
src/: ast.rs  ctx.rs  error.rs  id.rs  ir.rs  main.rs  phases.rs  refs.rs  storage.rs
src/ast/: mod.rs  parser.lalrpop
src/error/: mod.rs
src/ir/: context.rs  definition.rs  identifier.rs  mod.rs  module.rs  storage.rs  symbol.rs
src/parsing/: ast.rs  mod.rs  parser.lalrpop  parser.rs
