[package]
name = "friday"
version = "0.1.0"
authors = ["Devin Hill <98devin@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"

[build-dependencies]
lalrpop = "0.17.2"

